# software-engineering-github-actions

./: CMakeLists.txt  LICENSE  README.md  build-and-test.bat  build-and-test.sh
.github/workflows/: build-and-test.yaml
inc/: calculator.h
lecture_sources/actions/issue-greeter-action-bash/: action.yaml
lecture_sources/actions/issue-greeter-action-js/: action.yaml  index.js  package-lock.json  package.json
lecture_sources/workflows/demos/: demo-build-and-test-multi.yaml  demo-build-and-test.yaml  demo-build-for-os.yaml  demo-build-multi-platform-badge.yaml  demo-build-with-artifacts.yaml  demo-issue-greeter.yaml
lecture_sources/workflows/examples/: example-actions-1.yaml  example-call-workflow-1.yaml  example-conditionals-1.yaml  example-gist-badge-json.yaml  example-jobs-1.yaml  example-jobs-2.yaml  example-permissions-1.yaml  example-reusable-workflow-1.yaml  example-steps-1.yaml  example-variables-1.yaml  example-variables-2.yaml
src/: calculator.cpp  main.cpp
test/: calculator_test.cpp
